--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+    <title>
+        Ipenthimisi_mounas
+    </title>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/> 
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="moto1">
+        <h1>Πάπι μου, να θυμάσαι το πόσα πολλά πράγματα έχεις πετύχει στη ζωή σου και πόσα άλλα καλά θα πετύχεις στο μέλλον! &#9829</h1> 
+    </div>
+    
+    <div class="moto2">
+        <h1>Όταν το ξεχνάς να θυμάσαι αυτή τη φωτογραφία και να θυμάσαι ότι θα σε βαρέσει:</h1>
+        <img src="./30.jpg" alt="">
+    </div>    
+</body>
