--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     
     <div class="moto2">
         <h1>Όταν το ξεχνάς να θυμάσαι αυτή τη φωτογραφία και να θυμάσαι ότι θα σε βαρέσει:</h1>
-        <img src="./30.jpg" alt="">
+        <img src="A16E16D3-4AA9-4D4B-A732-ED4C38038F67.jpeg" alt="">
     </div>    
 </body>
