--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     
     <div class="moto2">
         <h1>Όταν το ξεχνάς να θυμάσαι αυτή τη φωτογραφία και να θυμάσαι ότι θα σε βαρέσει:</h1>
-        <img src="30.jpg" alt="">
+        <img src="image/30.jpg" alt="">
     </div>    
 </body>
